<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">DroneApp</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">DroneApp</string>
    <string name="nav_header_subtitle" translatable="false">Información adicional</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_crear_vuelo" translatable="false">Crear Vuelo</string>
    <string name="menu_vuelos_terminados" translatable="false">Vuelos Terminados</string>
    <string name="menu_vuelos_en_procesamiento" translatable="false">Vuelos en Procesamiento</string>
    <string name="menu_vuelos_pendientes" translatable="false">Vuelos Pendientes</string>
    <string name="menu_detalles_vuelo" translatable="false">Detalles de vuelo</string>

    <string name="menu_cerrar_sesion" translatable="false">Cerrar Sesion</string>
    <string name="menu_cerrar_sesion_antes" translatable="false">Opciones Adicionales</string>

    <!-- Para el login-->
    <string name="title_activity_login">Iniciar Sesion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Inicie Sesion</string>
    <string name="action_sign_in_short">Inicie Sesion</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">No es un usuario valido</string>
    <string name="invalid_password">Su contraseña deberia de tener mas de 5 caracteres</string>
    <string name="login_failed">"Inicio de Sesion Fallido"</string>

    <!--Para la activity de Crear Vuelo-->
    <string name="nombre_crear_vuelo">Nombre</string>
    <string name="nombre_hint_crear_vuelo">Ingrese el nombre del vuelo</string>
    <string name="fecha_y_hora_crear_vuelo">Fecha/Hora</string>
    <string name="fecha_y_hora_hint_crear_vuelo">Ingrese la fecha y hora </string>
    <string name="tipo_de_camara_crear_vuelo">Tipo de Camara</string>
    <string name="tipo_de_camara_hint_crear_vuelo">Seleccione el tipo de cámara a usar</string>
    <string name="multiespectral_crear_vuelo">Multiespectral</string>
    <string name="comentarios_crear_vuelo">Comentarios</string>
    <string name="crear_vuelo">Crear</string>
    <string name="cancelar_crear_vuelo">Cancelar</string>

    <!-- visualizacion de vuelos especificos -->
    <string name="nombre_vuelos_terminados">Nombre</string>
    <string name="fecha_creacion_vuelos_terminados">Fecha de Creación</string>
    <string name="tiempo_de_procesamiento_vuelos_terminados">Tiempo de procesamiento</string>
    <string name="notas_vuelos_terminados">Notas</string>
    <string name="boton_resultados_vuelos_terminados">RESULTADOS</string>
    <string name="boton_mosaicos_vuelos_terminados">MOSAICO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detalles_vuelo">detalles_vuelo</string>
    <string name="ortomosaico">visualizar ortomosaico</string>
    <string name="vuelo_especifico">vuelo especifico</string>
</resources>
