<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_crear_vuelo"
            android:icon="@drawable/ic_add_circle_outline_black_24dp"
            android:title="@string/menu_crear_vuelo" />
        <item
            android:id="@+id/nav_vuelos_terminados"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_vuelos_terminados" />
        <item
            android:id="@+id/nav_vuelos_en_procesamiento"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_vuelos_en_procesamiento" />
        <item
            android:id="@+id/nav_vuelos_pendientes"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_vuelos_pendientes" />
    </group>

    <item android:title="@string/menu_cerrar_sesion_antes">
        <menu>
            <item
                android:id="@+id/nav_cerrar_sesion"
                android:icon="@drawable/ic_close_black_24dp"
                android:title="@string/menu_cerrar_sesion" />
        </menu>
    </item>

</menu>
