<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_vuelos_terminados">

    <fragment
        android:id="@+id/nav_crear_vuelo"
        android:name="com.example.droneapp.ui.crear_vuelo.CrearVueloFragment"
        android:label="@string/menu_crear_vuelo"
        tools:layout="@layout/fragment_crear_vuelo" />

    <fragment
        android:id="@+id/nav_vuelos_terminados"
        android:name="com.example.droneapp.ui.vuelos_terminados.VuelosTerminadosFragment"
        android:label="@string/menu_vuelos_terminados"
        tools:layout="@layout/fragment_vuelos_terminados" />

    <fragment
        android:id="@+id/nav_vuelos_en_procesamiento"
        android:name="com.example.droneapp.ui.vuelos_en_procesamiento.VuelosEnProcesamientoFragment"
        android:label="@string/menu_vuelos_en_procesamiento"
        tools:layout="@layout/fragment_vuelos_en_procesamiento" />

    <fragment
        android:id="@+id/nav_vuelos_pendientes"
        android:name="com.example.droneapp.ui.vuelos_pendientes.VuelosPendientesFragment"
        android:label="@string/menu_vuelos_pendientes"
        tools:layout="@layout/fragment_vuelos_pendientes" />

    <fragment
        android:id="@+id/nav_detalles_vuelo"
        android:name="com.example.droneapp.ui.vuelos_terminados.Visualizacion_de_un_vuelo_especifico"
        android:label="@string/menu_detalles_vuelo"
        tools:layout="@layout/fragment_visualizacion_de_un_vuelo_especifico">
        <argument
            android:name="flight"
            app:argType="com.example.droneapp.APIClient.FlightPOJO" />
    </fragment>

    <fragment
        android:id="@+id/nav_cerrar_sesion"
        android:name="com.example.droneapp.ui.cerrar_sesion.CerrarSesionFragment"
        android:label="@string/menu_cerrar_sesion" />
</navigation>